--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <title>Easy converter HTML to DOC</title>
+    <title>Easy HTML to DOC converter</title>
 
     <!-- Latest compiled and minified CSS of Bootstrap -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
@@ -24,10 +24,10 @@
     <div class="container">
 
       <div class="starter-template">
-        <h1>Easy converter HTML to DOC</h1>
+        <h1>Easy HTML to DOC converter</h1>
         <p class="lead">Insert your HTML inside textarea below and press the button</p>
         <form action="script.php" method="POST" id="target">
-          <textarea id="plainHTML" class="form-control"></textarea>
+          <textarea name="plainHTML" id="plainHTML" class="form-control"></textarea>
           <input type="submit" value="Convert to DOC" class="btn btn-primary" disabled="disabled">
         </form>
       </div>
